Added api response for image information request.
