# jupyterhub_singleuser_profiles/api/swagger.yaml
@@ -72,6 +72,25 @@ paths:
             application/json:
               schema:
                 type: string
+  
+  /api/images/{image_name}:
+    get:
+      operationId: jupyterhub_singleuser_profiles.api.api.get_image_info
+      summary: Get human readable image information in a json.
+      parameters:
+        - name: image_name
+          in: path
+          required: true
+          description: Name of the image
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
 
   /api/sizes:
     get:
