# jupyterhub_singleuser_profiles/profiles.py
@@ -143,6 +143,9 @@ class SingleuserProfiles(object):
   def get_sizes(self):
     return self.sizes
 
+  def get_image_info(self, image_name):
+    return self.images.get_info(image_name)
+
   @classmethod
   def empty_profile(self):
     return {
